# agentic-ai-for-python-course

./: CLAUDE.md  README.md  junie-pycharm-rules.md  michael-kennedys-cursor-rules.md  requirements.txt  venv_update.sh
code/audio-player/: details.html  index.html
code/audio-player/.cursor/commands/: web-design-cleanup.md
code/gittyup/: .gitignore  AGENTS.md  pyproject.toml  pytest.ini  readme.md  requirements-development.piptools  requirements.piptools  requirements.txt  ruff.toml
code/gittyup/.cursor/commands/: test-review.md
code/gittyup/gittyup/: __init__.py  __main__.py  cli.py  config.py  constants.py  git_operations.py  models.py  reporter.py  scanner.py
code/gittyup/plans/: design-plan.md
code/gittyup/tests/: test_config.py  test_git_operations.py  test_models.py  test_reporter.py  test_scanner.py
